--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>extentreports</artifactId>
             <version>5.1.0</version>
         </dependency>
+
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.9.2</version> <!-- latest stable as of 2025 -->
+</dependency>
+
     </dependencies>
 
     <build>
